<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>component</name>
    <version>0.0.1</version>
    <description>A basic rclcpp component that consumes CPU</description>
    <author>Movvo Robotics</author>
    <maintainer email="support.idi@movvo.eu">movvo</maintainer>

    <license>2-clause BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>std_srvs</depend>
 
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
